src/objects/n2de__Distributor_rr_sa__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Distribution_team_member__c</fullName>
        <label>Distribution team member</label>
        <referenceTo>n2de__Team_member__c</referenceTo>
        <relationshipLabel>Distributor rr-sa</relationshipLabel>
        <relationshipName>Distributor_rr_sa</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Distributor__c</fullName>
        <label>Distributor</label>
        <referenceTo>n2de__Distributor__c</referenceTo>
        <relationshipLabel>Distributor rr-sa</relationshipLabel>
        <relationshipName>Distributor_rr_sa</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Is_ooo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is OOO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_sticky__c</fullName>
        <formula>IF( AND(OR(ISPICKVAL(n2de__Distributor__r.n2de__Algorithm__c, &apos;Round robin sticky assignment&apos;), ISPICKVAL(n2de__Distributor__r.n2de__Algorithm__c, &apos;Load balancing sticky assignment&apos;)) , NOT(n2de__Is_ooo__c)), ((NOW()-CreatedDate)*1440) &lt; n2de__Distributor__r.n2de__Sticky_period_minutes__c, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is sticky</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Matched_assignments__c</fullName>
        <label>Matched assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Object_name__c</fullName>
        <label>Object name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Redundant__c</fullName>
        <formula>((NOW()-CreatedDate)*1440) &gt; (n2de__Distributor__r.n2de__Sticky_period_minutes__c + 10080)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Redundant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Sticky_match_level__c</fullName>
        <label>Sticky match level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution team</label>
        <referenceTo>n2de__Team__c</referenceTo>
        <relationshipLabel>Distributor rr-sa</relationshipLabel>
        <relationshipName>Distributor_rr_sa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Unique_identifier__c</fullName>
        <label>Unique identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Distributor_rr_sa</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Distributor rr-sa</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor rr-sa</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>